crates/macro-tools/tests/ui/accessors/fail/skip_on_struct.rs
use picea_macro_tools::Accessors;

#[derive(Accessors)]
#[accessor(skip)]
struct Meta {
    name: String,
}

fn main() {}
