crates/macro-tools/tests/ui/accessors/fail/skip_on_struct.stderr
error: `skip` is only allowed on fields
 --> tests/ui/accessors/fail/skip_on_struct.rs:4:1
  |
4 | #[accessor(skip)]
  | ^^^^^^^^^^^^^^^^^
